@@ -3,12 +3,15 @@ package com.projectspace.projectspaceapi.authentication;
 import com.projectspace.projectspaceapi.user.model.User;
 import com.projectspace.projectspaceapi.user.service.UserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.Collection;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +25,10 @@ public class AuthenticationUserDetailService implements UserDetailsService {
         if (apiUser == null) {
             throw new UsernameNotFoundException(username);
         }
-        return new org.springframework.security.core.userdetails.User(apiUser.getUsername(), apiUser.getPassword(), Collections.emptyList());
+        return new org.springframework.security.core.userdetails.User(apiUser.getUsername(), apiUser.getPassword(), getAuthorities(apiUser.getRole()));
+    }
+
+    private Collection<? extends GrantedAuthority> getAuthorities(String role) {
+        return List.of(new SimpleGrantedAuthority(role));
     }
 }
